--- a/index.html
+++ b/index.html
@@ -2,31 +2,45 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IHP Reparaciones | Servicio Técnico</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-    <!-- ENCABEZADO -->
-    <header >
-      <section class="banner">
+    <!-- HEADER / BANNER -->
+    <header class="banner">
+      <div class="banner-content">
+        <img
+          src="assets/img/logo.png"
+          alt="Logo IHP Reparaciones"
+          class="logo"
+        />
+
         <h1>IHP Reparaciones</h1>
-        <p>Servicio técnico en electrónica e informática</p>
+        <p>
+          Servicio técnico en Electrónica e Informática <br />
+          <strong>
+            Soluciones Digitales,Desarrollo de Software y Marketing
+          </strong>
+        </p>
 
-        <!-- Logo (lo agregás cuando quieras) -->
-        <img src="assets/img/logo.png" alt="Logo IHP Reparaciones" class="logo" />
+        <nav class="nav">
+  <button class="menu-toggle" id="menu-toggle">
+    ☰
+  </button>
 
-        <nav>
-          <ul>
-            <li><a href="#quienes">Quiénes Somos</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#testimonios">Experiencias</a></li>
-            <!-- Anchor listo para YouTube -->
-            <li><a href="#youtube">YouTube</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-          </ul>
-        </nav>
-      </section>
+  <ul class="nav-list" id="nav-list">
+    <li><a href="#quienes">Quiénes Somos</a></li>
+    <li><a href="#servicios"><strong>Servicios</strong></a></li>
+    <li><a href="#testimonios">Experiencias</a></li>
+    <li><a href="Desarrollo">  <strong>Desarrollo de software</strong></a></li>
+    <li><a href="#youtube">YouTube</a></li>
+    <li><a href="#contacto">Contacto</a></li>
+  </ul>
+</nav>
+
+      </div>
     </header>
 
     <!-- QUIÉNES SOMOS -->
@@ -44,30 +58,38 @@
       <h2>Servicios</h2>
 
       <div class="grid-servicios">
-        <div class="card">
-          <h3>Reparación de Celulares</h3>
-          <p>
-            Cambio de pantallas, baterías, puertos de carga, software y
-            diagnóstico electrónico.
-          </p>
-        </div>
 
-        <div class="card">
-          <h3>Computadoras y Notebooks</h3>
-          <p>
-            Instalación de sistemas, mantenimiento, limpieza interna,
-            optimización y upgrades.
-          </p>
-        </div>
+  <a href="celulares.html" class="card-link">
+    <div class="card">
+      <h3>Reparación de Celulares</h3>
+      <p>
+        Cambio de pantallas, baterías, puertos de carga, software y
+        diagnóstico electrónico.
+      </p>
+    </div>
+  </a>
 
-        <div class="card">
-          <h3>Electrónica</h3>
-          <p>
-            Diagnóstico y reparación de placas electrónicas y componentes.
-          </p>
-        </div>
-      </div>
-    </section>
+  <a href="pcs.html" class="card-link">
+    <div class="card">
+      <h3>Computadoras y Notebooks</h3>
+      <p>
+        Instalación de sistemas, mantenimiento, limpieza interna,
+        optimización y upgrades.
+      </p>
+    </div>
+  </a>
+   <a href="consolas.html" class="card-link">
+    <div class="card">
+      <h3>Consolas de videojuegos</h3>
+      <p>
+        Mantenimiento, limpieza interna,
+        optimización, Reparacion a nivel electrónico.
+      </p>
+    </div>
+  </a>
+
+</div>
+
 
     <!-- TESTIMONIOS -->
     <section id="testimonios" class="contenedor">
@@ -83,45 +105,38 @@
       </blockquote>
     </section>
 
-    <!-- YOUTUBE (placeholder) -->
+    <!-- YOUTUBE -->
     <section id="youtube" class="contenedor">
       <h2>Contenido técnico</h2>
       <p>
         Próximamente voy a estar subiendo reparaciones reales y procesos técnicos
         a mi canal de YouTube.
       </p>
-      <!-- Acá después va el iframe -->
     </section>
 
-    <!-- CONTACTO -->
+    <!-- FOOTER -->
     <footer id="contacto">
       <h2>Contacto</h2>
 
-      <ul>
+      <ul class="footer-links">
         <li>
-          <h2>
-            <a
-              href="https://www.instagram.com/ihp_reparaciones/"
-              target="_blank"
-            >
-              📷 Instagram
-            </a>
-          </h2>
+          <a
+            href="https://www.instagram.com/ihp_reparaciones/"
+            target="_blank"
+          >
+            📷 Instagram
+          </a>
         </li>
 
         <li>
-          <h2>
-            <a
-              href="https://www.whatsapp.com/catalog/5493795321712/?app_absent=0"
-              target="_blank"
-            >
-              📲 WhatsApp
-            </a>
-          </h2>
+          <a
+            href="https://www.whatsapp.com/catalog/5493795321712/?app_absent=0"
+            target="_blank"
+          >
+            📲 WhatsApp
+          </a>
         </li>
       </ul>
-
-      <p>Escribime para consultas o presupuestos:</p>
 
       <form
         action="mailto:romeroenzofabian@gmail.com"
@@ -132,7 +147,7 @@
         <input type="email" name="email" placeholder="Tu correo" required />
         <textarea
           name="mensaje"
-          placeholder="Escribí tu mensaje acá..."
+          placeholder="Escribí tu mensaje..."
           rows="5"
         ></textarea>
         <button type="submit">Enviar</button>
@@ -140,5 +155,9 @@
 
       <p class="copy">© 2026 IHP Reparaciones</p>
     </footer>
+   
+<script src="Menu.js"></script>
+
+
   </body>
 </html>
